--- a/index.html
+++ b/index.html
@@ -8,19 +8,25 @@
 </head>
 <body>
   <header>
-    <nav>
-      <h1 class="logo">NoCap Press</h1>
-     
-    </nav>
+    <h1 class="logo">NoCapPress</h1>
+    <div class="nav-buttons">
+      <a href="login.html" class="nav-btn login">Login</a>
+      <a href="signup.html" class="nav-btn signup">Signup</a>
+    </div>
   </header>
 
   <main>
     <section class="hero">
-      <h2>Unfiltered. Unlimited. Unapologetic 🖋️</h2>
-      <p>Write your truth and read what others won’t sugarcoat.</p>
-      <a href="login.html" class="cta-button">Let’s Start</a>
+      <div class="hero-text">
+        <h2>Unfiltered. Unlimited. Unapologetic 🖋️</h2>
+        <p>Write your truth and read what others won’t sugarcoat.</p>
+        <a href="login.html" class="cta-button">Let’s Start</a>
+      </div>
     </section>
   </main>
 
+  <footer>
+    <p>© 2025 NoCapPress. All Rights Reserved.</p>
+  </footer>
 </body>
 </html>
